# modern-cpp-kafka

./: .bazelrc  .clang-tidy  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  CNAME  LICENSE  MODULE.bazel  NOTICE  README.md  WORKSPACE  index.html
.github/workflows/: ci_tests.yml  gen_doc.yml  kafka_api_bazel_build.yml  kafka_api_ci_tests.yml  kafka_api_demo_conan_build.yml  kafka_api_gen_doc.yml  on_pull_request.yml  scorecards.yml
cmake/: modern-cpp-kafka-config.cmake.in  modern-cpp-kafka.pc.in
customrules/: rapidjson.BUILD
demo_projects_for_build/conan_build/: CMakeLists.txt  conanfile.txt
doc/: CMakeLists.txt  GoodPracticesToUseKafkaConsumer.md  GoodPracticesToUseKafkaProducer.md  HowToMakeKafkaProducerReliable.md  KafkaBrokerConfiguration.md  KafkaClientConfiguration.md  KafkaConsumerQuickStart.md  KafkaProducerQuickStart.md
doxygen/: AdminClientConfig_8h_source.html  AdminClient_8h_source.html  AdminCommon_8h_source.html  BrokerMetadata_8h_source.html  ClientCommon_8h_source.html  ClientConfig_8h_source.html  ConsumerCommon_8h_source.html  ConsumerConfig_8h_source.html  ConsumerRecord_8h_source.html  Consumer_8h_source.html  Error_8h_source.html  Header_8h_source.html  Interceptors_8h_source.html  KafkaClient_8h_source.html  KafkaConsumer_8h_source.html  KafkaException_8h_source.html  KafkaMetrics_8h_source.html  KafkaProducer_8h_source.html  KafkaRecoverableProducer_8h_source.html  Log_8h_source.html  Logger_8h_source.html  ProducerCommon_8h_source.html  ProducerConfig_8h_source.html  ProducerRecord_8h_source.html  Producer_8h_source.html  Project_8h_source.html  Properties_8h_source.html  RdKafkaHelper_8h_source.html  Timestamp_8h_source.html  Types_8h_source.html  UnorderedOffsetCommitQueue_8h_source.html  Utility_8h_source.html  annotated.html  classKAFKA__API_1_1AdminClient-members.html  classKAFKA__API_1_1AdminClient.html  classKAFKA__API_1_1AdminClientConfig-members.html  classKAFKA__API_1_1AdminClientConfig.html  classKAFKA__API_1_1ConsumerConfig-members.html  classKAFKA__API_1_1ConsumerConfig.html  classKAFKA__API_1_1ConsumerRecord-members.html  (+146 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  (+45 more)
examples/: BUILD  BUILD.bazel  CMakeLists.txt  example_KafkaClient_Callbacks.cc  example_KafkaConsumer_ManualOffsetCommit.cc  example_KafkaConsumer_RebalanceEvents.cc  example_KafkaConsumer_Simple.cc  example_KafkaProducer_DeepCopy.cc  example_KafkaProducer_EnableManualEventsPoll.cc  example_KafkaProducer_Lifecycle.cc  example_KafkaProducer_Simple.cc  example_ProducerRecordHeaders.cc  example_Properties.cc  kafka_async_producer_copy_payload.cc  kafka_async_producer_not_copy_payload.cc  kafka_auto_commit_consumer.cc  kafka_manual_commit_consumer.cc  kafka_sync_producer.cc
include/: CMakeLists.txt
include/kafka/: AdminClient.h  AdminClientConfig.h  AdminCommon.h  BrokerMetadata.h  ClientCommon.h  ClientConfig.h  Consumer.h  ConsumerCommon.h  ConsumerConfig.h  ConsumerRecord.h  Error.h  Header.h  Interceptors.h  KafkaClient.h  KafkaConsumer.h  KafkaException.h  KafkaProducer.h  Log.h  Logger.h  Producer.h  ProducerCommon.h  ProducerConfig.h  ProducerRecord.h  Project.h  Properties.h  RdKafkaHelper.h  Timestamp.h  Types.h  Utility.h
include/kafka/addons/: EasyCurl.h  KafkaMetrics.h  KafkaRecoverableProducer.h  UnorderedOffsetCommitQueue.h
markdown/: GoodPracticesToUseKafkaConsumer.html  GoodPracticesToUseKafkaProducer.html  HowToMakeKafkaProducerReliable.html  KafkaBrokerConfiguration.html  KafkaConsumerQuickStart.html  KafkaProducerQuickStart.html
scripts/: doxyfile.cfg  markdown2html.py  start-local-kafka-cluster.py
tests/: BUILD  BUILD.bazel  CMakeLists.txt
tests/integration/: CMakeLists.txt  TestAdminClient.cc  TestKafkaConsumer.cc  TestKafkaEnv.cc  TestKafkaProducer.cc  TestKafkaRecoverableProducer.cc  TestTransaction.cc
tests/robustness/: CMakeLists.txt  TestAdminClient.cc  TestKafkaConsumer.cc  TestKafkaProducer.cc  TestTransaction.cc
tests/unit/: CMakeLists.txt  TestBrokerMetadata.cc  TestConsumerRecord.cc  TestError.cc  TestHeader.cc  TestKafkaClientDefaultProperties.cc  TestKafkaException.cc  TestKafkaMetrics.cc  TestProducerRecord.cc  TestProperties.cc  TestTimestamp.cc  TestTypes.cc  TestUnorderedOffsetCommitQueue.cc  TestUtility.cc
tests/utils/: TestUtility.h
tools/: BUILD  BUILD.bazel  CMakeLists.txt  KafkaConsoleConsumer.cc  KafkaConsoleProducer.cc  KafkaTopics.cc
tools/console_clients/: CMakeLists.txt  KafkaConsoleConsumer.cc  KafkaConsoleProducer.cc  KafkaTopics.cc
