module(
    name = "modern-cpp-kafka",
    version = "2024.07.03",
    bazel_compatibility = [">=7.2.1"],  # need support for "overlay" directory
    compatibility_level = 0,
)

bazel_dep(name = "boost.algorithm", version = "1.87.0")
bazel_dep(name = "googletest", version = "1.16.0", repo_name = "gtest")
bazel_dep(name = "librdkafka", version = "2.8.0")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
