cc_binary(
    name = "kafka_sync_producer",

    srcs = ["kafka_sync_producer.cc"],

    linkopts = ["-lrdkafka"],

    deps = ["//:modern-cpp-kafka-api"],
)

cc_binary(
    name = "kafka_async_producer_copy_payload",

    srcs = ["kafka_async_producer_copy_payload.cc"],

    linkopts = ["-lrdkafka"],

    deps = ["//:modern-cpp-kafka-api"],
)

cc_binary(
    name = "kafka_async_producer_not_copy_payload",

    srcs = ["kafka_async_producer_not_copy_payload.cc"],

    linkopts = ["-lrdkafka"],

    deps = ["//:modern-cpp-kafka-api"],
)

cc_binary(
    name = "kafka_auto_commit_consumer",

    srcs = ["kafka_auto_commit_consumer.cc"],

    linkopts = ["-lrdkafka"],

    deps = ["//:modern-cpp-kafka-api"],
)

cc_binary(
    name = "kafka_manual_commit_consumer",

    srcs = ["kafka_manual_commit_consumer.cc"],

    linkopts = ["-lrdkafka"],

    deps = ["//:modern-cpp-kafka-api"],
)

