cc_test(
    name = "kafka-unit-test",
    timeout = "short",
    srcs = glob([
        "unit/*.cc",
        "utils/*.h",
    ]),
    linkopts = ["-lrdkafka"],
    tags = ["unit"],
    deps = [
        "//:modern_cpp_kafka",
        "@boost.algorithm",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "kafka-integration-test",
    timeout = "long",
    srcs = glob([
        "integration/*.cc",
        "utils/*.h",
    ]),
    linkopts = ["-lrdkafka"],
    shard_count = 8,
    tags = ["integration"],
    deps = [
        "//:modern_cpp_kafka",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "kafka-robustness-test",
    timeout = "long",
    srcs = glob([
        "robustness/*.cc",
        "utils/*.h",
    ]),
    linkopts = ["-lrdkafka"],
    shard_count = 1,
    tags = ["robustness"],
    deps = [
        "//:modern_cpp_kafka",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
